TOUJOURS DES PROBLèMES.

--- a/projet.ipynb
+++ b/projet.ipynb
@@ -10,11 +10,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 273,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-20T16:59:34.487189Z",
-     "start_time": "2023-05-20T16:59:34.383146Z"
+     "end_time": "2023-05-20T17:35:59.114065Z",
+     "start_time": "2023-05-20T17:35:59.045606Z"
     }
    },
    "outputs": [],
@@ -67,11 +67,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 274,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-20T16:59:34.488131Z",
-     "start_time": "2023-05-20T16:59:34.388740Z"
+     "end_time": "2023-05-20T17:35:59.114818Z",
+     "start_time": "2023-05-20T17:35:59.047769Z"
     }
    },
    "outputs": [],
@@ -103,11 +103,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 275,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-20T16:59:34.488488Z",
-     "start_time": "2023-05-20T16:59:34.395816Z"
+     "end_time": "2023-05-20T17:35:59.115715Z",
+     "start_time": "2023-05-20T17:35:59.054908Z"
     }
    },
    "outputs": [],
@@ -136,11 +136,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 276,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-20T16:59:34.488833Z",
-     "start_time": "2023-05-20T16:59:34.401273Z"
+     "end_time": "2023-05-20T17:35:59.115891Z",
+     "start_time": "2023-05-20T17:35:59.060411Z"
     }
    },
    "outputs": [],
@@ -160,11 +160,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 277,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-20T16:59:34.489201Z",
-     "start_time": "2023-05-20T16:59:34.407978Z"
+     "end_time": "2023-05-20T17:35:59.122113Z",
+     "start_time": "2023-05-20T17:35:59.069529Z"
     }
    },
    "outputs": [],
@@ -202,11 +202,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 278,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-20T16:59:34.489766Z",
-     "start_time": "2023-05-20T16:59:34.414306Z"
+     "end_time": "2023-05-20T17:35:59.122527Z",
+     "start_time": "2023-05-20T17:35:59.083234Z"
     }
    },
    "outputs": [],
@@ -236,11 +236,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 279,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-20T16:59:34.490111Z",
-     "start_time": "2023-05-20T16:59:34.419366Z"
+     "end_time": "2023-05-20T17:35:59.122571Z",
+     "start_time": "2023-05-20T17:35:59.087131Z"
     }
    },
    "outputs": [],
@@ -275,11 +275,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 280,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-20T16:59:34.490415Z",
-     "start_time": "2023-05-20T16:59:34.424546Z"
+     "end_time": "2023-05-20T17:35:59.122610Z",
+     "start_time": "2023-05-20T17:35:59.093414Z"
     }
    },
    "outputs": [],
@@ -319,11 +319,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 281,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-20T16:59:34.490745Z",
-     "start_time": "2023-05-20T16:59:34.428148Z"
+     "end_time": "2023-05-20T17:35:59.122646Z",
+     "start_time": "2023-05-20T17:35:59.096877Z"
     }
    },
    "outputs": [],
@@ -345,11 +345,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 282,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-20T16:59:34.491060Z",
-     "start_time": "2023-05-20T16:59:34.432194Z"
+     "end_time": "2023-05-20T17:35:59.122713Z",
+     "start_time": "2023-05-20T17:35:59.101315Z"
     }
    },
    "outputs": [],
@@ -374,11 +374,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 283,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-20T16:59:34.491464Z",
-     "start_time": "2023-05-20T16:59:34.438806Z"
+     "end_time": "2023-05-20T17:35:59.123040Z",
+     "start_time": "2023-05-20T17:35:59.105174Z"
     }
    },
    "outputs": [],
@@ -408,11 +408,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 284,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-20T16:59:34.497717Z",
-     "start_time": "2023-05-20T16:59:34.443735Z"
+     "end_time": "2023-05-20T17:35:59.123081Z",
+     "start_time": "2023-05-20T17:35:59.110718Z"
     }
    },
    "outputs": [],
@@ -435,22 +435,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 285,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-20T16:59:35.293363Z",
-     "start_time": "2023-05-20T16:59:34.450707Z"
+     "end_time": "2023-05-20T17:35:59.805819Z",
+     "start_time": "2023-05-20T17:35:59.126510Z"
     }
    },
    "outputs": [],
    "source": [
     "def ecrire_bloc(image):\n",
     "    f = open(\"fichier.txt\", \"a\")\n",
-    "    for i in range(len(image)):\n",
-    "        for j in range(len(image[0])):\n",
-    "            for k in range(len(image[0][0])):\n",
+    "    for k in range(3):\n",
+    "        for i in range(len(image)):\n",
+    "            for j in range(len(image[0])):\n",
     "                f.write(str(image[i][j][k])+\" \")\n",
-    "            f.write(\"\\n\")\n",
+    "        f.write('\\n')\n",
     "    f.close()\n",
     "    return\n",
     "\n",
@@ -468,11 +468,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 286,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-20T16:59:35.297301Z",
-     "start_time": "2023-05-20T16:59:35.295534Z"
+     "end_time": "2023-05-20T17:35:59.812363Z",
+     "start_time": "2023-05-20T17:35:59.811093Z"
     }
    },
    "outputs": [],
@@ -514,11 +514,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 287,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-20T16:59:35.301467Z",
-     "start_time": "2023-05-20T16:59:35.300475Z"
+     "end_time": "2023-05-20T17:35:59.816410Z",
+     "start_time": "2023-05-20T17:35:59.814918Z"
     }
    },
    "outputs": [],
@@ -550,11 +550,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 288,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-20T16:59:35.323975Z",
-     "start_time": "2023-05-20T16:59:35.318339Z"
+     "end_time": "2023-05-20T17:35:59.824975Z",
+     "start_time": "2023-05-20T17:35:59.816655Z"
     }
    },
    "outputs": [],
@@ -616,11 +616,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 289,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-20T17:00:23.366525Z",
-     "start_time": "2023-05-20T17:00:03.812868Z"
+     "end_time": "2023-05-20T17:36:17.605088Z",
+     "start_time": "2023-05-20T17:35:59.830084Z"
     }
    },
    "outputs": [
@@ -631,8 +631,8 @@
      "traceback": [
       "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
       "\u001B[0;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn [272], line 21\u001B[0m\n\u001B[1;32m     19\u001B[0m ecrire_bloc(test)\n\u001B[1;32m     20\u001B[0m info_fichier(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mfichier.txt\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m---> 21\u001B[0m \u001B[43mlire_fichier\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mfichier.txt\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m)\u001B[49m\n",
-      "Cell \u001B[0;32mIn [270], line 42\u001B[0m, in \u001B[0;36mlire_fichier\u001B[0;34m(fichier)\u001B[0m\n\u001B[1;32m     40\u001B[0m         \u001B[38;5;28;01mfor\u001B[39;00m k \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(\u001B[38;5;28mlen\u001B[39m(liste_bloc[\u001B[38;5;241m0\u001B[39m][\u001B[38;5;241m0\u001B[39m])):\n\u001B[1;32m     41\u001B[0m             \u001B[38;5;28;01mfor\u001B[39;00m l \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(\u001B[38;5;28mlen\u001B[39m(liste_bloc[\u001B[38;5;241m0\u001B[39m][\u001B[38;5;241m0\u001B[39m][\u001B[38;5;241m0\u001B[39m])):\n\u001B[0;32m---> 42\u001B[0m                 \u001B[43mliste_bloc\u001B[49m\u001B[43m[\u001B[49m\u001B[43mi\u001B[49m\u001B[43m]\u001B[49m\u001B[43m[\u001B[49m\u001B[43mj\u001B[49m\u001B[43m]\u001B[49m\u001B[43m[\u001B[49m\u001B[43mk\u001B[49m\u001B[43m]\u001B[49m\u001B[43m[\u001B[49m\u001B[43ml\u001B[49m\u001B[43m]\u001B[49m \u001B[38;5;241m=\u001B[39m liste_bloc[i][j][k][l]\u001B[38;5;241m.\u001B[39mreplace(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;130;01m\\n\u001B[39;00m\u001B[38;5;124m\"\u001B[39m, \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[1;32m     43\u001B[0m liste_bloc \u001B[38;5;241m=\u001B[39m decompress(liste_bloc)\n\u001B[1;32m     44\u001B[0m f\u001B[38;5;241m.\u001B[39mclose()\n",
+      "Cell \u001B[0;32mIn [289], line 21\u001B[0m\n\u001B[1;32m     19\u001B[0m ecrire_bloc(test)\n\u001B[1;32m     20\u001B[0m info_fichier(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mfichier.txt\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m---> 21\u001B[0m \u001B[43mlire_fichier\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mfichier.txt\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m)\u001B[49m\n",
+      "Cell \u001B[0;32mIn [288], line 42\u001B[0m, in \u001B[0;36mlire_fichier\u001B[0;34m(fichier)\u001B[0m\n\u001B[1;32m     40\u001B[0m         \u001B[38;5;28;01mfor\u001B[39;00m k \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(\u001B[38;5;28mlen\u001B[39m(liste_bloc[\u001B[38;5;241m0\u001B[39m][\u001B[38;5;241m0\u001B[39m])):\n\u001B[1;32m     41\u001B[0m             \u001B[38;5;28;01mfor\u001B[39;00m l \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(\u001B[38;5;28mlen\u001B[39m(liste_bloc[\u001B[38;5;241m0\u001B[39m][\u001B[38;5;241m0\u001B[39m][\u001B[38;5;241m0\u001B[39m])):\n\u001B[0;32m---> 42\u001B[0m                 \u001B[43mliste_bloc\u001B[49m\u001B[43m[\u001B[49m\u001B[43mi\u001B[49m\u001B[43m]\u001B[49m\u001B[43m[\u001B[49m\u001B[43mj\u001B[49m\u001B[43m]\u001B[49m\u001B[43m[\u001B[49m\u001B[43mk\u001B[49m\u001B[43m]\u001B[49m\u001B[43m[\u001B[49m\u001B[43ml\u001B[49m\u001B[43m]\u001B[49m \u001B[38;5;241m=\u001B[39m liste_bloc[i][j][k][l]\u001B[38;5;241m.\u001B[39mreplace(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;130;01m\\n\u001B[39;00m\u001B[38;5;124m\"\u001B[39m, \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[1;32m     43\u001B[0m liste_bloc \u001B[38;5;241m=\u001B[39m decompress(liste_bloc)\n\u001B[1;32m     44\u001B[0m f\u001B[38;5;241m.\u001B[39mclose()\n",
       "\u001B[0;31mTypeError\u001B[0m: 'str' object does not support item assignment"
      ]
     }
@@ -669,10 +669,7 @@
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2023-05-20T16:59:54.679535Z"
-    }
+    "collapsed": false
    }
   }
  ],
