--- a/projet.ipynb
+++ b/projet.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 170,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-20T17:35:59.114065Z",
@@ -41,8 +41,7 @@
     "    return sp.fft.dct( sp.fft.dct( a, axis=0, norm='ortho' ), axis=1, norm='ortho' )\n",
     "\n",
     "def idct2(a):\n",
-    "    return sp.fft.idct( sp.fft.idct( a, axis=0 , norm='ortho'), axis=1 , norm='ortho')\n",
-    "\n"
+    "    return sp.fft.idct( sp.fft.idct( a, axis=0 , norm='ortho'), axis=1 , norm='ortho')\n"
    ]
   },
   {
@@ -67,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 171,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-20T17:35:59.114818Z",
@@ -103,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 172,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-20T17:35:59.115715Z",
@@ -136,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 173,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-20T17:35:59.115891Z",
@@ -160,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 174,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-20T17:35:59.122113Z",
@@ -202,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 175,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-20T17:35:59.122527Z",
@@ -236,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 176,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-20T17:35:59.122571Z",
@@ -247,7 +246,6 @@
    "source": [
     "\n",
     "def mult_mat(matrice):\n",
-    "    matrice2 = matrice.copy()\n",
     "    for i in range(matrice.shape[0]):\n",
     "        for j in range(0, matrice.shape[1]//2):\n",
     "            matrice[i][j*2][1] = matrice2[i][j][1]\n",
@@ -275,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 177,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-20T17:35:59.122610Z",
@@ -319,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 178,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-20T17:35:59.122646Z",
@@ -345,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 179,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-20T17:35:59.122713Z",
@@ -361,7 +359,7 @@
     "                for l in range(len(liste_bloc[0][0][0])):\n",
     "                    if liste_bloc[i][j][k][l] < seuil:\n",
     "                        liste_bloc[i][j][k][l] = 0\n",
-    "    return"
+    "    return liste_bloc"
    ]
   },
   {
@@ -374,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 180,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-20T17:35:59.123040Z",
@@ -408,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 181,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-20T17:35:59.123081Z",
@@ -435,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 182,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-20T17:35:59.805819Z",
@@ -468,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 183,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-20T17:35:59.812363Z",
@@ -514,7 +512,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 188,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[188], line 47\u001b[0m\n\u001b[0;32m     43\u001b[0m     \u001b[39m# Retourne la matrice de l'image RGB\u001b[39;00m\n\u001b[0;32m     44\u001b[0m     \u001b[39mreturn\u001b[39;00m image\n\u001b[1;32m---> 47\u001b[0m decompress_image_from_file(\u001b[39m'\u001b[39;49m\u001b[39mno_compression.txt\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
+      "Cell \u001b[1;32mIn[188], line 16\u001b[0m, in \u001b[0;36mdecompress_image_from_file\u001b[1;34m(input_file)\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[39m# Initialisation de la matrice de l'image\u001b[39;00m\n\u001b[0;32m     14\u001b[0m image \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mzeros((height, width, \u001b[39m3\u001b[39m), dtype\u001b[39m=\u001b[39mnp\u001b[39m.\u001b[39muint8)\n\u001b[1;32m---> 16\u001b[0m \u001b[39mprint\u001b[39m(f\u001b[39m.\u001b[39;49mreadlines()[\u001b[39m1\u001b[39;49m])\n\u001b[0;32m     18\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(height):\n\u001b[0;32m     19\u001b[0m     \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(width):\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "def decompress_image_from_file(input_file):\n",
+    "    with open(input_file, 'r') as f:\n",
+    "        # Lecture de la taille de l'image depuis la deuxième ligne\n",
+    "\n",
+    "        image_size = (f.readlines()[1].split())\n",
+    "\n",
+    "        # Calcul des dimensions de l'image\n",
+    "        height, width = int(image_size[0]), int(image_size[1])\n",
+    "\n",
+    "        bloc_h = height//8\n",
+    "        bloc_l = width//8\n",
+    "\n",
+    "        # Initialisation de la matrice de l'image\n",
+    "        image = np.zeros((height, width, 3), dtype=np.uint8)\n",
+    "\n",
+    "        print(f.readlines()[1])\n",
+    "\n",
+    "        for i in range(height):\n",
+    "            for j in range(width):\n",
+    "\n",
+    "                for k in range(4,bloc_h*bloc_l+4):\n",
+    "                    print(k)\n",
+    "                    bloc_Y = f.readlines()[k]\n",
+    "                    bloc_Y = idct2(bloc_Y)\n",
+    "\n",
+    "                    image[i*8:(i+1)*8, j*8:(j+1)*8, 0] = bloc_Y\n",
+    "\n",
+    "                for l in range(bloc_h*bloc_l+4,2*bloc_h*bloc_l+4):\n",
+    "                    bloc_Cb = f.readlines()[l]\n",
+    "                    bloc_Cb = idct2(bloc_Cb)\n",
+    "\n",
+    "                    image[i*8:(i+1)*8, j*8:(j+1)*8, 1] = bloc_Cb\n",
+    "\n",
+    "                for m in range(2*bloc_h*bloc_l+4,3*bloc_h*bloc_l+4):\n",
+    "                    bloc_Cr = f.readlines()[m]\n",
+    "                    bloc_Cr = idct2(bloc_Cr)\n",
+    "\n",
+    "                    image[i*8:(i+1)*8, j*8:(j+1)*8, 2] = bloc_Cr\n",
+    "\n",
+    "    # Conversion de l'espace de couleur YCbCr en RGB\n",
+    "    image = YCbCR_en_RGB(image)\n",
+    "\n",
+    "    # Retourne la matrice de l'image RGB\n",
+    "    return image\n",
+    "\n",
+    "\n",
+    "decompress_image_from_file('no_compression.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-20T17:35:59.816410Z",
@@ -550,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-20T17:35:59.824975Z",
@@ -559,7 +626,6 @@
    },
    "outputs": [],
    "source": [
-    "rle = False\n",
     "def info_fichier(fichier):\n",
     "    global rle\n",
     "    f = open(fichier, \"r\")\n",
@@ -616,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-20T17:36:17.605088Z",
@@ -625,15 +691,19 @@
    },
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'str' object does not support item assignment",
+     "ename": "ValueError",
+     "evalue": "could not convert string to float: '0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 \\n'",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [289], line 21\u001b[0m\n\u001b[1;32m     19\u001b[0m ecrire_bloc(test)\n\u001b[1;32m     20\u001b[0m info_fichier(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfichier.txt\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 21\u001b[0m \u001b[43mlire_fichier\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mfichier.txt\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn [288], line 42\u001b[0m, in \u001b[0;36mlire_fichier\u001b[0;34m(fichier)\u001b[0m\n\u001b[1;32m     40\u001b[0m         \u001b[38;5;28;01mfor\u001b[39;00m k \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(liste_bloc[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m0\u001b[39m])):\n\u001b[1;32m     41\u001b[0m             \u001b[38;5;28;01mfor\u001b[39;00m l \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(liste_bloc[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m0\u001b[39m])):\n\u001b[0;32m---> 42\u001b[0m                 \u001b[43mliste_bloc\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[43mj\u001b[49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[43mk\u001b[49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[43ml\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;241m=\u001b[39m liste_bloc[i][j][k][l]\u001b[38;5;241m.\u001b[39mreplace(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     43\u001b[0m liste_bloc \u001b[38;5;241m=\u001b[39m decompress(liste_bloc)\n\u001b[1;32m     44\u001b[0m f\u001b[38;5;241m.\u001b[39mclose()\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'str' object does not support item assignment"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[122], line 23\u001b[0m\n\u001b[0;32m      1\u001b[0m test \u001b[39m=\u001b[39m load(\u001b[39m\"\u001b[39m\u001b[39mtest.png\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      3\u001b[0m \u001b[39m#testYCbCr = YCbCR_en_RGB(RGB_en_YCbCR(test))\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[39m#Image.fromarray(test,'RGB').show()\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[39m#Image.fromarray(testYCbCr,'RGB').show()\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[39m#info_fichier(\"fichier.txt\")\u001b[39;00m\n\u001b[0;32m     21\u001b[0m \u001b[39m#lire_fichier(\"fichier.txt\")\u001b[39;00m\n\u001b[1;32m---> 23\u001b[0m decompress_file(\u001b[39m'\u001b[39;49m\u001b[39mno_compression.txt\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
+      "Cell \u001b[1;32mIn[119], line 10\u001b[0m, in \u001b[0;36mdecompress_file\u001b[1;34m(file)\u001b[0m\n\u001b[0;32m      7\u001b[0m image \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mzeros((rows\u001b[39m*\u001b[39m\u001b[39m8\u001b[39m, cols\u001b[39m*\u001b[39m\u001b[39m8\u001b[39m), dtype\u001b[39m=\u001b[39mnp\u001b[39m.\u001b[39muint8)\n\u001b[0;32m      9\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(liste_bloc)):\n\u001b[1;32m---> 10\u001b[0m   liste_bloc[i] \u001b[39m=\u001b[39m idct2(liste_bloc[i])\n\u001b[0;32m     12\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(rows):\n\u001b[0;32m     13\u001b[0m   \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(cols):\n",
+      "Cell \u001b[1;32mIn[105], line 23\u001b[0m, in \u001b[0;36midct2\u001b[1;34m(a)\u001b[0m\n\u001b[0;32m     22\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39midct2\u001b[39m(a):\n\u001b[1;32m---> 23\u001b[0m     \u001b[39mreturn\u001b[39;00m sp\u001b[39m.\u001b[39mfft\u001b[39m.\u001b[39midct( sp\u001b[39m.\u001b[39;49mfft\u001b[39m.\u001b[39;49midct( a, axis\u001b[39m=\u001b[39;49m\u001b[39m0\u001b[39;49m , norm\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mortho\u001b[39;49m\u001b[39m'\u001b[39;49m), axis\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m , norm\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mortho\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "File \u001b[1;32mc:\\Users\\arias\\miniconda3\\lib\\site-packages\\scipy\\fft\\_backend.py:25\u001b[0m, in \u001b[0;36m_ScipyBackend.__ua_function__\u001b[1;34m(method, args, kwargs)\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[39mif\u001b[39;00m fn \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m     24\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mNotImplemented\u001b[39m\n\u001b[1;32m---> 25\u001b[0m \u001b[39mreturn\u001b[39;00m fn(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n",
+      "File \u001b[1;32mc:\\Users\\arias\\miniconda3\\lib\\site-packages\\scipy\\fft\\_pocketfft\\realtransforms.py:19\u001b[0m, in \u001b[0;36m_r2r\u001b[1;34m(forward, transform, x, type, n, axis, norm, overwrite_x, workers, orthogonalize)\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_r2r\u001b[39m(forward, transform, x, \u001b[39mtype\u001b[39m\u001b[39m=\u001b[39m\u001b[39m2\u001b[39m, n\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, axis\u001b[39m=\u001b[39m\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, norm\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m,\n\u001b[0;32m      9\u001b[0m          overwrite_x\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m, workers\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, orthogonalize\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m):\n\u001b[0;32m     10\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Forward or backward 1-D DCT/DST\u001b[39;00m\n\u001b[0;32m     11\u001b[0m \n\u001b[0;32m     12\u001b[0m \u001b[39m    Parameters\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[39m        The transform to perform\u001b[39;00m\n\u001b[0;32m     18\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m---> 19\u001b[0m     tmp \u001b[39m=\u001b[39m _asfarray(x)\n\u001b[0;32m     20\u001b[0m     overwrite_x \u001b[39m=\u001b[39m overwrite_x \u001b[39mor\u001b[39;00m _datacopied(tmp, x)\n\u001b[0;32m     21\u001b[0m     norm \u001b[39m=\u001b[39m _normalization(norm, forward)\n",
+      "File \u001b[1;32mc:\\Users\\arias\\miniconda3\\lib\\site-packages\\scipy\\fft\\_pocketfft\\helper.py:92\u001b[0m, in \u001b[0;36m_asfarray\u001b[1;34m(x)\u001b[0m\n\u001b[0;32m     90\u001b[0m     \u001b[39mreturn\u001b[39;00m np\u001b[39m.\u001b[39masarray(x, np\u001b[39m.\u001b[39mfloat32)\n\u001b[0;32m     91\u001b[0m \u001b[39melif\u001b[39;00m x\u001b[39m.\u001b[39mdtype\u001b[39m.\u001b[39mkind \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m \u001b[39m'\u001b[39m\u001b[39mfc\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[1;32m---> 92\u001b[0m     \u001b[39mreturn\u001b[39;00m np\u001b[39m.\u001b[39;49masarray(x, np\u001b[39m.\u001b[39;49mfloat64)\n\u001b[0;32m     94\u001b[0m \u001b[39m# Require native byte order\u001b[39;00m\n\u001b[0;32m     95\u001b[0m dtype \u001b[39m=\u001b[39m x\u001b[39m.\u001b[39mdtype\u001b[39m.\u001b[39mnewbyteorder(\u001b[39m'\u001b[39m\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[1;31mValueError\u001b[0m: could not convert string to float: '0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 \\n'"
      ]
     }
    ],
@@ -652,15 +722,15 @@
     "#Image.fromarray(YCbCR_en_RGB(mult_mat(sous_echantillonnage(RGB_en_YCbCR(test)))),'RGB').show()\n",
     "#print(psnr(test, YCbCR_en_RGB(mult_mat(sous_echantillonnage(RGB_en_YCbCR(test))))))\n",
     "\n",
-    "mode_0 =applique_trans(decoupe_bloc(padding(RGB_en_YCbCR(test))))\n",
-    "mode_1 = applique_seuil(applique_trans(decoupe_bloc(padding(RGB_en_YCbCR(test)))),10)\n",
-    "mode_2 = applique_seuil(applique_trans(decoupe_bloc(padding(sous_echantillonnage(RGB_en_YCbCR(test))))),10)\n",
-    "ecrire_fichier(test, \"mode 0\")\n",
-    "ecrire_bloc(test)\n",
-    "info_fichier(\"fichier.txt\")\n",
-    "lire_fichier(\"fichier.txt\")\n",
-    "#Image.fromarray(mode_0,'RGB').show()\n",
-    "#Image.fromarray(mode_1,'RGB').show()"
+    "#mode_0 =applique_trans(decoupe_bloc(padding(RGB_en_YCbCR(test))))\n",
+    "#mode_1 = applique_seuil(applique_trans(decoupe_bloc(padding(RGB_en_YCbCR(test)))),10)\n",
+    "#mode_2 = applique_seuil(applique_trans(decoupe_bloc(padding(sous_echantillonnage(RGB_en_YCbCR(test))))),10)\n",
+    "#ecrire_fichier(test, \"mode 0\")\n",
+    "#ecrire_bloc(test)\n",
+    "#info_fichier(\"fichier.txt\")\n",
+    "#lire_fichier(\"fichier.txt\")\n",
+    "\n",
+    "decompress_file('no_compression.txt')\n"
    ]
   },
   {
